# bdfl_extraction

./: .gitignore  README.md  pyproject.toml  tasks.py
configs/: get_draftguide.yaml  get_players.yaml  get_valuehist.yaml
notebooks/: README.md
src/bdfl/data/: __init__.py  get_draftguide.py  get_players.py  get_valuehist.py  players_to_draftguide.py  players_to_value_hist.py  transform.py
src/bdfl/utils/: __init__.py  cache.py  genlaunch.py  pandas_io.py
tests/: conftest.py  test_get_players.py  test_get_valuehist.py  test_getdraftguide.py
