[tool.poetry]
name = "bdfl"
version = "0.1.0"
description = "An interface show and analyze a user's spotify playlists"
authors = ["Patrick Bray"]
readme = "README.md"
packages = [{include = "bdfl", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
loguru = "^0.7.0"
python-dotenv = "^1.0.1"
dataframe-decorators = "^0.2.0"
spotipy = "^2.23.0"
inflection = "^0.5.1"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"
flake8 = "^6.0.0"
ipykernel = "^6.23.2"
pytest = "^7.3.2"
beavis = "^0.3.0"
ghp-import = "^2.1.0"
pdoc = "^13.1.1"
invoke = "^2.1.3"
jupyter = {extras = ["black"], version = "^1.0.0"}
pytest-regressions = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[flake8]
max-line-length = 120
max-complexity = 10
